--- a/server_user/pom.xml
+++ b/server_user/pom.xml
@@ -70,6 +70,12 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.redisson/redisson -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.15.2</version>
+        </dependency>
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>server_common</artifactId>
